# ragcore

./: .dockerignore  .env.example  .gitignore  AUDIT.md  Dockerfile  LICENSE  LICENSE-pymupdf4llm.md  README.md  docker-compose.yml  faiss_metadata.pkl  orchestrator.py  pyproject.toml  render.yaml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  production_health_check.yml
.streamlit/: config.toml
agent/: __init__.py  graph.py  state.py
agent/memory/: __init__.py  long_term.py  short_term.py
agent/nodes/: __init__.py  evaluator.py  generator.py  reranker.py  retriever.py  router.py
agent/tools/: __init__.py  compare_docs.py  get_metadata.py  search_docs.py  summarize_doc.py
api/: main.py
api/middleware/: auth.py  body_size.py  rate_limit.py  request_id.py
config/: corpora.py  settings.py
data/: README.md
data/apple_demo/: apple__sec__financial_metrics_annual__2026.csv  apple__sec__financial_metrics_quarterly__2026.csv
data/faiss_seed/: faiss_index.idx  faiss_metadata.pkl
docs/: debugging-notes.md  hf-migration-phase0-decisions-2026-06-06.md  hf-migration-phase1-plan-2026-06-08.md  migration-baseline-2026-06-05.md  ragas_run_plan_2026-04-26.md
embeddings/: advanced_embeddings.py  embedder.py
evaluation/: dataset.py  evaluator.py
evaluation/datasets/: fiqa_corpus.json  fiqa_eval.json  load_fiqa.py
generation/: advanced_generation.py  llm_service.py
graph/: agent.py
ingestion/: pipeline.py
ingestion/chunkers/: chunkers.py
monitoring/: logging_config.py  metrics.py  tracer.py
notebooks/: agent_demo.ipynb
reranking/: advanced_reranker.py  reranker.py
retrieval/: hybrid_tuner.py
scripts/: fetch_apple_corpus.py  ingest_apple_corpus.py  rss_probe_linux.py  smoke_ingest_apple.py
ui_chainlit/: app.py  requirements.txt
ui_gradio/: README.md  app.py  requirements.txt
ui_streamlit/: app.py  comparison.py  requirements.txt
utils/: models.py
vectorstore/: bm25_index.py  chroma_store.py  session_store.py  vector_store.py
(+82 files in other folders)
