[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragcore"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    # Data validation & settings
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # HTTP client
    "httpx>=0.27",
    # LLM providers
    "openai>=1.14",
    "anthropic>=0.20",
    # Embeddings & vector search
    "sentence-transformers>=2.6",
    "faiss-cpu>=1.8",
    "tiktoken>=0.6",
    # Retrieval
    "rank-bm25>=0.2",
    # Agentic workflows
    "langchain-core>=0.1",
    "langgraph>=1.0.0",
    # Document loaders
    "pdfplumber>=0.10",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    # Numerics
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",      # TestClient
]
eval = [
    "ragas>=0.1",
    "datasets>=2.18",
    "matplotlib>=3.8",
    "plotly>=5.19",
    "rouge-score>=0.1",
    "bert-score>=0.3",
]
ui = [
    "streamlit>=1.31",
    "chainlit>=1.0",
    "gradio>=4.19",
]
monitoring = [
    "langfuse>=2.26",
    "opentelemetry-sdk>=1.23",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]
all = [
    "ragcore[test,eval,ui,monitoring,docs]",
]
dev = [
    "ragcore[all]",
    "ruff>=0.3",
    "pre-commit>=3.6",
    "ipykernel>=6.29",
    "nbconvert>=7.16",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agent*", "api*", "config*", "embeddings*", "evaluation*",
    "generation*", "ingestion*", "monitoring*", "reranking*",
    "retrieval*", "utils*", "vectorstore*",
]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
